--- a/templates/layout.html
+++ b/templates/layout.html
@@ -18,19 +18,9 @@
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
         <div class="container-fluid">
             <a class="navbar-brand" href="/">1st Python WEB</a>
-            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
-                aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
-            </button>
-            <div class="collapse navbar-collapse" id="navbarNav">
-                <ul class="navbar-nav">
-                    <li class="nav-item">
-                        <a class="nav-link active" aria-current="page" href="/">Home</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="{{ url_for('about')}}">About</a>
-                    </li>
-                </ul>
+            <div class="navbar-nav m-md-auto" id="navbarNav">
+                        <a class="navbar-brand active" aria-current="page" href="/">Home</a>
+                        <a class="navbar-brand" href="{{ url_for('about')}}">About</a>
             </div>
         </div>
     </nav>
