--- a/templates/layout.html
+++ b/templates/layout.html
@@ -6,20 +6,33 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>{% block title %} {% endblock %}</title>
+
     <!-- BOOTSTRAP -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
-    <!-- CUSTOM CSS-->
+
+        <!-- CUSTOM CSS-->
     <link rel="stylesheet" href="{{ url_for('static', filename='css/styles.css') }}">
+
+    <!-- Option one -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/paho-mqtt/1.0.1/mqttws31.js" type="text/javascript"></script>
+    <!-- Opition two -->
+        <script src="/static/js/mqttws31.js"></script>
+
 </head>
 
 <body>
     <!-- As a link -->
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
         <div class="container-fluid">
-            <a class="navbar-brand" href="/">1st Python WEB</a>
+            <a class="navbar-brand" href="/">
+                <div class="logotipo">
+				    <img class="icono" src="/static/images/icons/noun_internet of things_143916.png">
+                </div>
+            </a>
             <div class="navbar-nav m-md-auto" id="navbarNav">
                         <a class="navbar-brand active" aria-current="page" href="/">Home</a>
+                        <a id="logBtn" class="navbar-brand" href="">LogIn</a>
                         <a class="navbar-brand" href="{{ url_for('about')}}">About</a>
             </div>
         </div>
@@ -29,6 +42,51 @@
 
         {% endblock %}
     </div>
+
+    <div id="logModal" class="modal">
+		<div class="modal-content">
+			<span class="close">&times;</span>
+
+				<form>
+					<label>Username : </label>
+					<input type="text" placeholder="Enter Username" name="username" required>
+					<label>Password : </label>
+					<input type="password" placeholder="Enter Password" name="password" required>
+					<button type="submit">Login</button>
+					<input type="checkbox" checked="checked"> Remember me
+					<button type="button" class="cancelbtn"> Cancel</button>   
+					Forgot <a href="#"> password? </a>
+				</form>
+		</div>
+	</div>
+
+	<script>
+		// Get the modal
+		var modal = document.getElementById("logModal");
+		
+		// Get the button that opens the modal
+		var btn = document.getElementById("logBtn");
+		
+		// Get the <span> element that closes the modal
+		var span = document.getElementsByClassName("close")[0];
+		
+		// When the user clicks the button, open the modal 
+		btn.onclick = function() {
+		  modal.style.display = "block";
+		}
+		
+		// When the user clicks on <span> (x), close the modal
+		span.onclick = function() {
+		  modal.style.display = "none";
+		}
+		
+		// When the user clicks anywhere outside of the modal, close it
+		window.onclick = function(event) {
+		  if (event.target == modal) {
+			modal.style.display = "none";
+		  }
+		}
+	</script>
 
 </body>
 
