--- a/templates/layout.html
+++ b/templates/layout.html
@@ -8,8 +8,8 @@
 	<title>{% block title %} {% endblock %}</title>
 
     <!-- BOOTSTRAP -->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
-        integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+    <!-- <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous"> -->
 
         <!-- CUSTOM CSS-->
     <link rel="stylesheet" href="{{ url_for('static', filename='css/styles.css') }}">
@@ -17,27 +17,44 @@
     <!-- Option one -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/paho-mqtt/1.0.1/mqttws31.js" type="text/javascript"></script>
     <!-- Opition two -->
-        <script src="/static/js/mqttws31.js"></script>
+        <script src="{{ url_for('static', filename='js/mqttws31.js') }}"></script>
 
 </head>
 
 <body>
     <!-- As a link -->
-    <nav class="navbar navbar-expand-lg navbar-light bg-light">
+<!--     <nav class="navbar navbar-expand-lg navbar-light bg-light">
         <div class="container-fluid">
             <a class="navbar-brand" href="/">
                 <div class="logotipo">
-				    <img class="icono" src="/static/images/icons/noun_internet of things_143916.png">
+				    <img class="icono" src="{{ url_for('static', filename='images/icons/noun_internet of things_143916.png') }}">
                 </div>
             </a>
             <div class="navbar-nav m-md-auto" id="navbarNav">
                         <a class="navbar-brand active" aria-current="page" href="/">Home</a>
-                        <a id="logBtn" class="navbar-brand" href="">LogIn</a>
+                        <a id="logBtn" class="navbar-brand" href="#">LogIn</a>
                         <a class="navbar-brand" href="{{ url_for('about')}}">About</a>
             </div>
         </div>
     </nav>
-    <div class="container p-4">
+ -->
+    <!-- As a header -->
+	<header>
+	<nav class="contenedorHeader">
+		<a href="/">
+			<div class="logotipo">
+				<img class="icono" src="{{ url_for('static', filename='images/icons/noun_internet of things_143916.png') }}">
+			</div>
+		</a>
+		<div class="contenedorMenu">
+			<button class="menu">Inicio</button>
+			<button class="menu">Enlace 1</button>
+			<button class="menu">Enlace 2</button>
+			<button id="logBtn" class="menu">Log In</button>
+		</div>
+	</nav>
+</header>
+<div class="container p-4">
         {% block content %}
 
         {% endblock %}
